# CoupledParticleFilters

./: .gitignore  .gitmodules  CITATION.cff  DATASET.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  evaluate_particles.py  precompute_data.py  pyproject.toml
configs/: model_assets.yml  project.yml
configs/experiments/: filter_fusion.yml
other_baseline/: where2act_adapter.py
pytorch_cgn/: run_grasp.py
scripts/: convert_artifacts_float32.py  download_model_assets.py  precompute_parallel.sh
src/coupled_particle_filters/: __init__.py  adapters.py  bag_io.py  cli.py  config.py  engine.py  evaluation_support.py  filters.py  fusion.py  math.py  pipelines.py  project_config.py  runner.py  types.py
