[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coupled-particle-filters"
version = "0.1.0"
description = "Coupled particle filters for robust affordance estimation"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "numpy>=1.26,<2",
  "opencv-python>=4.8,<5",
  "pydantic>=2.7,<3",
  "pyyaml>=6,<7",
  "rosbags>=0.10,<0.11",
  "torch>=2.1,<2.2",
]

[project.optional-dependencies]
models = [
  "pillow>=10,<12",
  "scipy>=1.11,<2",
  "tqdm>=4.66,<5",
  "trimesh>=4,<5",
  "torchvision>=0.16,<0.17",
]
evaluation = [
  "fast-simplification==0.1.13",
  "kaolin==0.17.0",
  "lxml>=5,<7",
  "matplotlib>=3.8,<4",
  "pandas>=2.1,<3",
  "pycollada>=0.8,<1",
  "pytransform3d>=3.5,<4",
  "trimesh>=4,<5",
  "torchvision>=0.16,<0.17",
]

[project.scripts]
cpf-run = "coupled_particle_filters.cli:main"
cpf-precompute = "precompute_data:main"

[tool.setuptools]
packages = ["coupled_particle_filters"]
py-modules = ["evaluate_particles", "precompute_data"]

[tool.setuptools.package-dir]
coupled_particle_filters = "src/coupled_particle_filters"

[tool.uv]
package = true
find-links = [
  "https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-2.1.2_cu121.html",
]
